[package]
name = "BoyKisserUncentral"
description = "No no no"
author = "Sympact"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"   
lto = true        
codegen-units = 1 #
panic = "abort"  
strip = true     

build = "build.rs"

[dependencies]
crossterm = "0.27.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
sha2 = "0.10"
console = "0.15"
injrs = "0.1.2"
winres = "0.1"
log = "0.4"
simplelog = "0.12.2"
actix-web = "4.0"
base64 = { version = "0.21", features = ["alloc"] }
hmac = "0.12"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.5"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
dotenv = "0.15.0"


[build-dependencies]
winres = "0.1"
